--- a/Splash/pom.xml
+++ b/Splash/pom.xml
@@ -63,6 +63,12 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		<dependency>
+		  <groupId>com.sun.xml.ws</groupId>
+		  <artifactId>jaxws-ri</artifactId>
+		  <version>2.3.3</version>
+		  <type>pom</type>
+		</dependency>
 
 	</dependencies>
 
