--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://35.244.59.80:3306/splash
+spring.datasource.url=jdbc:mysql://192.185.93.103:3306/worthywa_splash?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.datasource.username=splashserver
-spring.datasource.password=Abc!23456
+spring.datasource.username=worthywa_server
+spring.datasource.password=abc123xyz
+spring.datasource.hikari.max-lifetime=600000
 
 ## Json Formatting
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
