--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 		  <version>2.3.3</version>
 		  <type>pom</type>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.8</version>
+		</dependency>
 
 	</dependencies>
 
