--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=worthywa_server
 spring.datasource.password=abc123xyz
 spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.maximum-pool-size=10   
-
+server.error.include-message=always
 ## Json Formatting
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
