--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.hikari.maximum-pool-size=10
 server.error.include-message=always
 ## Json Formatting
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+username="923248262087"
+password="scoutsno1"
 
 ## Jwt Configurations
 splash-sign.jwt.secret=uIpJXXiANpf9lk1HZQOxA0QpcYQKEruV
